# emacs-regexp

./: .gitignore  Cargo.toml  Makefile  README.md  generate-pc.sh  rust-toolchain
automata/: Cargo.toml
automata/src/: filters.rs  hashgrams.rs  lib.rs  litblock.rs  literal.rs  nfa.rs  trie.rs
automata/src/simple_eval/: mod.rs
ffi/: Cargo.toml  build.rs  cbindgen.toml
ffi/src/: lang_items.rs  lib.rs  libc_backend.rs  methods.rs  objects.rs  rex.c
ffi/test/: test-error.c  test-rex.c
ffi/test/panic/: test-panic.c
multibyte/: Cargo.toml
multibyte/proptest-regressions/: lib.txt
multibyte/src/: lib.rs
src/: filters.rs  hashgrams.rs  lib.rs  litblock.rs  literal.rs  nfa.rs  trie.rs
syntax/: Cargo.toml  README.md
syntax/proptest-regressions/: parser.txt
syntax/src/: ast.rs  lib.rs  parser.rs
