[workspace]
members                 = [
    ".",
    "syntax",
    "ffi",
    "automata",
]
default-members         = [
    ".",
    "syntax",
    "ffi",
    # "automata",
]
resolver                = "2"

[workspace.package]
edition                 = "2021"
repository              = "https://github.com/cosmicexplorer/emacs-regexp"
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]

[workspace.dependencies]
emacs-regexp            = { path = "./" }
emacs-regexp-automata   = { path = "./automata" }
emacs-regexp-syntax     = { path = "./syntax" }
emacs-regexp-ffi        = { path = "./ffi" }

cfg-if                  = "1"
displaydoc              = { version = "0.2.4", default-features = false }
static_assertions       = "1.1.0"
thiserror               = { git = "https://github.com/cosmicexplorer/thiserror", rev = "a108a9ef284ab09e07175254ba1b6a7f245a10fc", default-features = false }

[workspace.lints.clippy]
len_without_is_empty    = "allow"
redundant_field_names   = "allow"
too_many_arguments      = "allow"
single_component_path_imports = "allow"
module_inception        = "allow"
match_ref_pats          = "allow"
expl_impl_clone_on_copy = "deny"
if_not_else             = "deny"
needless_continue       = "deny"
unseparated_literal_suffix = "deny"
used_underscore_binding = "deny"
collapsible_else_if     = "allow"
result_large_err        = "allow"

# NB: These apply when building in this workspace, but do *not* apply to any crates outside of
# this workspace!
[profile.dev]
opt-level               = 0
debug                   = true
[profile.release]
# Optimizing for size doesn't seem to have much effect, so optimize for performance.
opt-level               = 3
# NB: output binary goes from ~800K => ~17K with debug = false!
debug                   = false

# --------------------------------------------------------------------------------------------------
[package]
name                    = "emacs-regexp"
description             = "Implementation of emacs regexp matching!"
version                 = "0.0.0"
edition.workspace       = true
license                 = "GPL-3.0-or-later"
repository.workspace    = true
authors.workspace       = true

[dependencies]
# emacs-regexp-automata.workspace = true
emacs-regexp-syntax.workspace = true

displaydoc.workspace    = true
thiserror.workspace     = true

[lints]
workspace               = true
