[workspace]
members                 = [
    ".",
    "syntax",
    "ffi",
    "automata",
    "multibyte",
]
default-members         = [
    ".",
    "syntax",
    "ffi",
    # "automata",
    "multibyte",
]
resolver                = "2"

[workspace.package]
edition                 = "2021"
repository              = "https://github.com/cosmicexplorer/emacs-regexp"
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]

[workspace.dependencies]
emacs-regexp            = { path = "./" }
emacs-regexp-automata   = { path = "./automata" }
emacs-regexp-syntax     = { path = "./syntax" }
emacs-regexp-ffi        = { path = "./ffi" }
emacs-multibyte         = { path = "./multibyte" }

cfg-if                  = "1"
displaydoc              = { version = "0.2.4", default-features = false }
rustc-hash              = { version = "1.1.0", default-features = false }
static_assertions       = "1.1.0"

proptest                = { version = "1.4.0", features = ["alloc", "unstable"] }
proptest-derive         = "0.4.0"

# Packages we've had to hack to get no_std support:
indexmap                = { git = "https://github.com/cosmicexplorer/indexmap", rev = "5e6571b26fd02ae9d9ee4c82340dded94bbe5d1a", default-features = false }
thiserror               = { git = "https://github.com/cosmicexplorer/thiserror", rev = "a108a9ef284ab09e07175254ba1b6a7f245a10fc", default-features = false }

[workspace.lints.clippy]
len_without_is_empty    = "allow"
redundant_field_names   = "allow"
too_many_arguments      = "allow"
single_component_path_imports = "allow"
module_inception        = "allow"
match_ref_pats          = "allow"
expl_impl_clone_on_copy = "deny"
if_not_else             = "deny"
needless_continue       = "deny"
unseparated_literal_suffix = "deny"
used_underscore_binding = "deny"
collapsible_else_if     = "allow"
result_large_err        = "allow"

# NB: These apply when building in this workspace, but do *not* apply to any crates outside of
# this workspace!
[profile.dev]
opt-level               = 0
debug                   = true
[profile.release]
# Optimizing for size doesn't seem to have much effect, so optimize for performance.
opt-level               = 3
# NB: output binary goes from ~800K => ~17K with debug = false!
debug                   = true

# --------------------------------------------------------------------------------------------------
[package]
name                    = "emacs-regexp"
description             = "Implementation of emacs regexp matching!"
version                 = "0.0.0"
edition.workspace       = true
license                 = "GPL-3.0-or-later"
repository.workspace    = true
authors.workspace       = true

[dependencies]
# emacs-regexp-automata.workspace = true
emacs-regexp-syntax.workspace = true

cfg-if.workspace        = true
displaydoc.workspace    = true
indexmap.workspace      = true
rustc-hash.workspace    = true
thiserror.workspace     = true

[lints]
workspace               = true
