[package]
name                    = "emacs-regexp-automata"
description             = "Specialized string scanning and matching techniques."
version                 = "0.0.0"
edition.workspace       = true
license                 = "GPL-3.0-or-later"
repository.workspace    = true
authors.workspace       = true

[dependencies]
hashbrown               = { version = "0.14", default-features = false, features = ["nightly", "inline-more"] }
rustc-hash.workspace    = true
# smallvec.workspace = true
# TODO: enable hw acceleration! see https://docs.rs/xxhash-rust/latest/xxhash_rust/#hw-acceleration
xxhash-rust             = { version = "0.8.10", features = ["xxh3", "const_xxh3"] }

[lints]
workspace               = true
