[package]
name                    = "emacs-regexp-automata"
description             = "Specialized string scanning and matching techniques."
version                 = "0.0.0"
edition.workspace       = true
license                 = "GPL-3.0-or-later"
repository.workspace    = true
authors.workspace       = true

[dependencies]
emacs-regexp-syntax.workspace = true

cfg-if.workspace        = true
displaydoc.workspace    = true
hashbrown.workspace     = true
indexmap.workspace      = true
rustc-hash.workspace    = true
thiserror.workspace     = true
xxhash-rust.workspace   = true

[lints]
workspace               = true
