[package]
name                    = "emacs-regexp-ffi"
description             = "C ABI interface to expose to C code such as emacs."
version                 = "0.0.0"
edition.workspace       = true
license                 = "GPL-3.0-or-later"
repository.workspace    = true
authors.workspace       = true

[lib]
name                    = "rex"
crate-type              = ["cdylib"]

[dependencies]
emacs-regexp.workspace  = true
num_enum                = { version =  "0.7.2", default-features = false, features = [] }

[build-dependencies]
cbindgen                = "0.26.0"

[dev-dependencies]

[lints]
workspace               = true
