[package]
name                    = "emacs-regexp-ffi"
description             = "C ABI interface to expose to C code such as emacs."
version                 = "0.0.0"
edition.workspace       = true
license                 = "GPL-3.0-or-later"
repository.workspace    = true
authors.workspace       = true

[lib]
name                    = "rex"
crate-type              = ["cdylib", "staticlib"]

[features]
default = ["libc"]
libc = ["dep:libc"]

[dependencies]
cfg-if                  = "1"
emacs-regexp.workspace  = true
libc                    = { version = "0.2.153", optional = true }
# num_enum                = { version =  "0.7.2", default-features = false, features = [] }

[dev-dependencies]
libc                    = "0.2.153"

[lints]
workspace               = true
