[package]
name                    = "emacs-regexp-ffi"
description             = "C ABI interface to expose to C code such as emacs."
version                 = "0.0.0"
edition.workspace       = true
license                 = "GPL-3.0-or-later"
repository.workspace    = true
authors.workspace       = true

[lib]
name                    = "rex"
crate-type              = ["cdylib", "staticlib"]

[features]
default                 = ["libc"]
libc                    = ["dep:libc"]
panic-testing           = []

[dependencies]
emacs-multibyte.workspace = true
emacs-regexp-syntax.workspace = true
emacs-regexp.workspace  = true

cfg-if.workspace        = true
static_assertions.workspace = true
# num_enum                = { version =  "0.7.2", default-features = false, features = [] }

libc                    = { version = "0.2.153", optional = true }

[lints]
workspace               = true
