[package]
name                    = "emacs-multibyte"
description             = "Support for encoding and decoding emacs multibyte strings."
version                 = "0.0.0"
edition.workspace       = true
license                 = "GPL-3.0-or-later"
repository.workspace    = true
authors.workspace       = true

[dependencies]
cfg-if.workspace        = true
static_assertions.workspace = true

proptest                = { workspace = true, optional = true }
proptest-derive         = { workspace = true, optional = true }

[features]
default = ["proptest"]
proptest = ["dep:proptest", "dep:proptest-derive"]

[lints]
workspace               = true
