[package]
name                    = "emacs-regexp-syntax"
description             = "AST generation from emacs regexp pattern strings."
version                 = "0.0.0"
edition.workspace       = true
license                 = "GPL-3.0-or-later"
repository.workspace    = true
authors.workspace       = true

[dependencies]
displaydoc.workspace    = true
thiserror.workspace     = true

[lints]
workspace               = true
