[package]
name                    = "emacs-regexp-syntax"
description             = "AST generation from emacs regexp pattern strings."
version                 = "0.0.0"
edition.workspace       = true
license                 = "GPL-3.0-or-later"
repository.workspace    = true
authors.workspace       = true

[dependencies]
cfg-if.workspace        = true
displaydoc.workspace    = true
static_assertions.workspace = true
thiserror.workspace     = true

[dev-dependencies]
proptest.workspace      = true
proptest-derive.workspace = true

[lints]
workspace               = true
