[package]
name                    = "emacs-regexp-syntax"
description             = "AST generation from emacs regexp pattern strings."
version                 = "0.0.0"
edition.workspace       = true
license                 = "GPL-3.0-or-later"
repository.workspace    = true
authors.workspace       = true

[dependencies]
emacs-multibyte.workspace = true

cfg-if.workspace        = true
displaydoc.workspace    = true
static_assertions.workspace = true
thiserror.workspace     = true

proptest                = { workspace = true, optional = true }
proptest-derive         = { workspace = true, optional = true }

[features]
default = ["proptest"]
proptest = ["dep:proptest", "dep:proptest-derive", "emacs-multibyte/proptest"]

[lints]
workspace               = true
